--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #f5f5f5;
+  background: white;
   font-family: "Poppins", sans-serif;
 }
 
@@ -15,11 +15,6 @@ ul {
 
 a {
   text-decoration: none;
-}
-
-.wrapper {
-  width: 1600px;
-  margin: 0 auto;
 }
 
 .items-center {
@@ -44,28 +39,102 @@ header {
   z-index: 100;
 }
 
-.menu-list {
-  gap: 60px;
+.main-block {
+  padding-top: 246px;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1600px;
+}
+
+.header_flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo_block {
+  display: flex;
+  align-items: center;
+}
+
+.menu-feedback-container {
+  display: flex;
 }
 
 .menu-list {
-  color: #666;
-  text-align: center;
-  font-family: DM Sans;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 26px;
+  display: flex;
+}
+
+.menu-list {
+  display: flex;
+  align-items: center;
+  gap: 60px;
 }
 
 nav {
   margin-right: 70px;
 }
+
 .feedback-icons {
+  display: flex;
+  align-items: center;
   gap: 20px;
 }
 
-.icon-feedback {
-  width: 30px;
-  height: 30px;
+.name-section {
+  margin-top: 245px;
+}
+
+.name p {
+  color: var(--Solid-Heading, #42446e);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: -1px;
+}
+
+.name span {
+  background: var(
+    --Gradient-Heading,
+    linear-gradient(90deg, #13b0f5 -2.06%, #e70faa 100%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.about-me {
+  padding-top: 200px;
+}
+
+.description-about-me-container {
+  max-width: 708px;
+}
+
+.description-about-me-container > p {
+  color: var(--dark-content, #666);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+.paragraph {
+  color: #42446e;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  letter-spacing: -0.4px;
+}
+
+.work-exp {
+  margin-top: 50px;
+}
+
+.work-experience-container > h2 {
+  margin-bottom: 5px;
 }
