--- a/style/main.css
+++ b/style/main.css
@@ -213,3 +213,49 @@ nav {
   display: flex;
   justify-content: space-between;
 }
+
+.paragraph-center {
+  text-align: center;
+  color: #42446e;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  letter-spacing: -0.4px;
+  margin-bottom: 10px;
+}
+
+.descr-tech-stack {
+  color: var(--dark-content, #666);
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.main-stack-icon-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-top {
+  display: flex;
+}
+
+.container-btn {
+  display: flex;
+}
+
+.stack-item {
+  margin-top: 140px;
+  margin-right: 103px;
+}
+
+.stack-item-last {
+  margin-top: 140px;
+  margin-right: 0px;
+}
