--- a/style/main.css
+++ b/style/main.css
@@ -132,7 +132,7 @@ nav {
 }
 
 .work-exp {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .work-experience-container > h2 {
@@ -146,6 +146,13 @@ nav {
   margin-bottom: 30px;
   border-bottom: 3px solid grey;
   align-items: center;
+}
+
+.container-main-work-experience-last {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid grey;
+  margin-bottom: 100px;
 }
 
 .left-container-main-work-experience h3 {
@@ -223,6 +230,10 @@ nav {
   margin-bottom: 10px;
 }
 
+.tech-stack {
+  margin-top: 100px;
+}
+
 .descr-tech-stack {
   color: var(--dark-content, #666);
   text-align: center;
@@ -256,4 +267,129 @@ nav {
 .stack-item-last {
   margin-top: 140px;
   margin-right: 0px;
+}
+
+.project {
+  margin-top: 100px;
+}
+
+.project-list-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.project-iten {
+  width: 373px;
+  height: 567;
+  margin-top: 96px;
+  margin-right: 45px;
+  margin-bottom: 87px;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
+}
+
+.project-iten-last {
+  width: 373px;
+  height: 567;
+  margin-top: 96px;
+  margin-right: 0;
+  margin-bottom: 87px;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
+}
+
+.project-name {
+  color: #000;
+  text-align: center;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 26px;
+  padding: 27px 0;
+}
+
+.project-description {
+  color: var(--dark-content, #666);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 26px;
+  padding: 0 28px;
+}
+
+.top-project-container {
+  display: flex;
+}
+
+.btn-project-container {
+  display: flex;
+}
+
+.list-hard {
+  color: var(--Solid-Heading, #42446e);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: center;
+}
+.list-hard-lable {
+  color: var(--Solid-Heading, #42446e);
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.links-projects {
+  display: flex;
+  justify-content: space-between;
+  padding: 21px 21px;
+}
+
+.link-project-container {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  text-decoration-line: underline;
+}
+
+.questions {
+  margin-top: 200px;
+  margin-bottom: 315px;
+}
+
+.question-lable {
+  color: var(--colors-heading, #1e0e62);
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 7px;
+}
+
+.question-mail-lable {
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 8px;
+  background: var(
+    --Gradient-Heading,
+    linear-gradient(90deg, #13b0f5 -2.06%, #e70faa 100%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
