--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: white;
+  background: rgb(255, 255, 255);
   font-family: "Poppins", sans-serif;
 }
 
@@ -25,7 +25,7 @@ a {
 }
 
 header {
-  height: 120px;
+  height: 100px;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -37,6 +37,10 @@ header {
   left: 0;
   right: 0;
   z-index: 100;
+}
+
+#bars {
+  display: none;
 }
 
 .main-block {
@@ -63,7 +67,7 @@ header {
   display: flex;
 }
 
-.menu-list {
+.menu-list > li > a {
   display: flex;
   color: #666;
   text-align: center;
@@ -714,6 +718,39 @@ nav {
   header {
     height: 200px;
   }
+
+  .nav-menu.visible {
+    right: 0;
+  }
+
+  .nav-menu {
+    position: fixed;
+    top: 0;
+    right: -50%;
+    width: 25%;
+    height: 100vh;
+    z-index: 101;
+    margin-right: 0;
+  }
+
+  .nav-menu ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: rgb(202, 195, 221);
+    opacity: 0.9;
+  }
+
+  #bars {
+    display: block;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    color: black;
+  }
 }
 
 @media (max-width: 593px) {
@@ -751,9 +788,9 @@ nav {
   }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 521px) {
   .container {
-    width: 300px;
+    width: 400px;
   }
 
   .project-list-container {
@@ -764,5 +801,33 @@ nav {
   .stack-item-last > img {
     width: 100px;
     height: 100px;
+  }
+}
+
+@media (max-width: 423px) {
+  .container {
+    width: 380px;
+  }
+
+  .project-list-container {
+    padding: 0;
+  }
+
+  .stack-item > img,
+  .stack-item-last > img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .question-lable {
+    font-size: 12px;
+  }
+
+  .link-project-container {
+    font-size: 12px;
+  }
+
+  .sign-footer > p {
+    font-size: 9px;
   }
 }
