implemented fonts into the  local repository

--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,60 @@
   --link-footer-color: #42446e;
 }
 
+@font-face {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-display: fallback;
+  src: url("../fonts/DM_Sans/DM-Sans-400.woff2");
+  font-stretch: normal;
+}
+
+@font-face {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-display: fallback;
+  src: url("../fonts/DM_Sans/DM-Sans-500.woff2");
+  font-stretch: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  font-display: fallback;
+  src: url("../fonts/Poppins/Poppins-300.woff2");
+  font-stretch: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-display: fallback;
+  src: url("../fonts/Poppins/Poppins-400.woff2");
+  font-stretch: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-display: fallback;
+  src: url("../fonts/Poppins/Poppins-500.woff2");
+  font-stretch: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-display: fallback;
+  src: url("../fonts/Poppins/Poppins-700.woff2");
+  font-stretch: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -92,7 +146,6 @@ header {
   text-align: center;
   font-family: DM Sans;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
   line-height: 26px;
 }
@@ -101,6 +154,10 @@ header {
   display: flex;
   align-items: center;
   gap: 60px;
+}
+
+.menu-item {
+  font-family: "DM Sans";
 }
 
 nav {
@@ -142,7 +199,6 @@ nav {
   color: var(--greating-text-color);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-size: 58px;
-  font-style: normal;
   font-weight: 700;
   line-height: 70px;
   letter-spacing: -1px;
@@ -166,14 +222,12 @@ nav {
 .description-about-me-container > p {
   color: var(--dark-content, #666);
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px;
 }
 .paragraph {
   color: var(--title-text-color);
   font-size: 42px;
-  font-style: normal;
   font-weight: 700;
   line-height: 52px;
   letter-spacing: -0.4px;
@@ -207,7 +261,6 @@ nav {
   color: var(--dark-content, #666);
   font-family: Poppins;
   font-size: 20px;
-  font-style: normal;
   font-weight: 400;
   line-height: 28px;
   letter-spacing: 1px;
@@ -224,7 +277,6 @@ nav {
 .lable-place {
   color: var(--light-Content, #a7a7a7);
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
   line-height: 28px;
   letter-spacing: 1px;
@@ -234,7 +286,6 @@ nav {
   color: var(--Button-text, #018c0f);
   text-align: center;
   font-size: 9px;
-  font-style: normal;
   font-weight: 600;
   line-height: 26px;
   width: 84px;
@@ -271,7 +322,6 @@ nav {
   text-align: center;
   color: var(--title-text-color);
   font-size: 42px;
-  font-style: normal;
   font-weight: 700;
   line-height: 52px;
   letter-spacing: -0.4px;
@@ -286,7 +336,6 @@ nav {
   color: var(--dark-content, #666);
   text-align: center;
   font-size: 32px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px;
 }
@@ -356,7 +405,6 @@ nav {
   color: var(--title-text-color);
   text-align: center;
   font-size: 28px;
-  font-style: normal;
   font-weight: 500;
   line-height: 26px;
   padding: 27px 0;
@@ -365,7 +413,6 @@ nav {
 .project-description {
   color: var(--title-text-description-color);
   font-size: 18px;
-  font-style: normal;
   font-weight: 300;
   line-height: 26px;
   padding: 0 28px;
@@ -382,7 +429,6 @@ nav {
 .list-hard {
   color: var(--title-text-description-color);
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px;
   text-align: center;
@@ -402,7 +448,6 @@ nav {
 .link-project-container {
   font-family: Poppins;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px; /* 162.5% */
 }
@@ -422,7 +467,6 @@ nav {
   text-align: center;
   font-family: DM Sans;
   font-size: 58px;
-  font-style: normal;
   font-weight: 700;
   line-height: 70px;
   letter-spacing: 7px;
@@ -432,7 +476,6 @@ nav {
   text-align: center;
   font-family: DM Sans;
   font-size: 58px;
-  font-style: normal;
   font-weight: 700;
   line-height: 70px;
   letter-spacing: 8px;
@@ -471,7 +514,6 @@ nav {
   color: var(--link-footer-color);
   font-family: DM Sans;
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px;
 }
@@ -481,7 +523,6 @@ nav {
   color: var(--link-footer-color);
   font-family: DM Sans;
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px;
 }
@@ -510,7 +551,6 @@ nav {
   color: var(--Solid-Heading, #42446e);
   font-family: DM Sans;
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 26px;
   margin-right: 52px;
@@ -520,9 +560,8 @@ nav {
   text-align: center;
   font-family: Poppins;
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 26px; /* 144.444% */
+  line-height: 26px;
 }
 
 .sign-text {
