--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,16 @@
   --link-footer-color: #42446e;
 }
 
+.dark-theme {
+  --background-body-color: #191919;
+  --greating-text-color: #d9d9d9;
+  --title-text-color: #ccc;
+  --background-project-container: #363636;
+  --title-text-description-color: #ccc;
+  --link-project-color: #fff;
+  --link-footer-color: #a7a7a7;
+}
+
 @font-face {
   font-family: "DM Sans";
   font-style: normal;
@@ -186,16 +196,6 @@ nav {
   cursor: pointer;
 }
 
-.dark-theme {
-  --background-body-color: #191919;
-  --greating-text-color: #d9d9d9;
-  --title-text-color: #ccc;
-  --background-project-container: #363636;
-  --title-text-description-color: #ccc;
-  --link-project-color: #fff;
-  --link-footer-color: #a7a7a7;
-}
-
 .name p {
   color: var(--greating-text-color);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -341,27 +341,20 @@ nav {
   line-height: 26px;
 }
 
-.main-stack-icon-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .container-top {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
 .container-btn {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
 .stack-item {
   margin-top: 140px;
-  margin-right: 103px;
 }
 
 .stack-item-last {
@@ -373,18 +366,8 @@ nav {
   margin-top: 100px;
 }
 
-.project-list-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .project-iten {
   width: 373px;
-  /* height: 567px; */
   margin-top: 96px;
   margin-right: 45px;
   margin-bottom: 87px;
@@ -393,16 +376,15 @@ nav {
   box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
 }
 
-.project-iten-last {
+/* .project-iten-last {
   width: 373px;
-  /* height: 567px; */
   margin-top: 96px;
   margin-right: 0;
   margin-bottom: 87px;
   border-radius: 20px;
   background: var(--background-project-container);
   box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
-}
+} */
 
 .project-name {
   color: var(--title-text-color);
@@ -423,10 +405,12 @@ nav {
 
 .top-project-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .btn-project-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .list-hard {
@@ -454,7 +438,7 @@ nav {
   font-family: Poppins;
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
 }
 
 .akar-clip-icon,
@@ -504,7 +488,7 @@ nav {
   align-items: center;
   padding-bottom: 53px;
   stroke-width: 2px;
-  border-bottom: 3px solid var(--dark-content, #666);
+  border-bottom: 3px solid #666;
 }
 
 .contact-footer-cont {
@@ -540,6 +524,7 @@ nav {
 .btn-footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -659,9 +644,55 @@ nav {
   }
 }
 
+@media (max-width: 1217px) {
+  .project-iten {
+    width: 340px;
+    margin-top: 86px;
+    margin-right: 25px;
+    margin-bottom: 87px;
+  }
+
+  .project-iten > img,
+  .project-iten-last > img {
+    width: 340px;
+  }
+
+  .menu-list > li > a {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1217px) {
+  .project-iten {
+    width: 320px;
+    margin-top: 86px;
+    margin-right: 25px;
+    margin-bottom: 87px;
+  }
+
+  .project-iten > img,
+  .project-iten-last > img {
+    width: 320px;
+  }
+}
+
+.project-iten-last {
+  width: 320px;
+  margin-top: 86px;
+  margin-right: 0;
+  margin-bottom: 77px;
+}
+
 @media (max-width: 1120px) {
+  body {
+    background: #018c0f;
+  }
   .container {
-    width: 800px;
+    width: 95%;
+  }
+
+  .project-iten {
+    margin-right: 0;
   }
 
   .logo-block > img,
@@ -682,7 +713,7 @@ nav {
 
   .btn-project-container,
   .top-project-container {
-    display: block;
+    display: flex;
   }
 
   .name p {
