--- a/style/main.css
+++ b/style/main.css
@@ -217,7 +217,7 @@ nav {
 }
 
 .description-about-me-container {
-  width: 800px;
+  width: 900px;
 }
 
 .description-about-me-container > p {
@@ -249,13 +249,6 @@ nav {
   margin-bottom: 30px;
   border-bottom: 3px solid grey;
   align-items: center;
-}
-
-.container-main-work-experience-last {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 3px solid grey;
-  margin-bottom: 100px;
 }
 
 .left-container-main-work-experience h3 {
@@ -341,32 +334,25 @@ nav {
   line-height: 26px;
 }
 
+.main-stack-icon-container {
+  margin-top: 140px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 180px;
+}
+
+.stack-item {
+  max-width: 78px;
+  flex: 2 0 25%;
+}
+
 .project-list-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 40px;
-}
-
-.container-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.container-btn {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.stack-item {
-  margin-top: 140px;
-}
-
-.stack-item-last {
-  margin-top: 140px;
-  margin-right: 0px;
 }
 
 .project {
@@ -572,26 +558,22 @@ nav {
     width: 1000px;
   }
 
+  .main-stack-icon-container {
+    margin-top: 50px;
+    gap: 85px;
+  }
+
   .project-iten {
     margin-top: 46px;
-    /* margin-right: 40px; */
     margin-bottom: 67px;
   }
 
   .stack-item {
     align-items: center;
     margin-top: 120px;
-    margin-right: 40px;
   }
 
-  .stack-item-last {
-    align-items: center;
-    margin-top: 120px;
-    margin-right: 0px;
-  }
-
-  .stack-item > img,
-  .stack-item-last > img {
+  .stack-item > img {
     width: 100px;
     height: 100px;
   }
@@ -599,7 +581,6 @@ nav {
   .project-iten {
     max-width: 350px;
     margin-top: 86px;
-    /* margin-right: 25px; */
     margin-bottom: 87px;
   }
 
@@ -650,7 +631,6 @@ nav {
   .project-iten {
     max-width: 320px;
     margin-top: 86px;
-    /* margin-right: 25px; */
     margin-bottom: 87px;
   }
 
@@ -660,9 +640,6 @@ nav {
 }
 
 @media (max-width: 1120px) {
-  body {
-    background: #018c0f;
-  }
   .container {
     width: 95%;
   }
@@ -736,14 +713,72 @@ nav {
   }
 }
 
-@media (max-width: 822px) {
-  .container {
-    width: 700px;
+@media (max-width: 1120px) {
+  .main-stack-icon-container {
+    gap: 55px;
+  }
+}
+
+@media (max-width: 930px) {
+  .nav-menu.visible {
+    right: 0;
   }
 
-  .container-top,
-  .container-btn {
+  .feedback-icons {
+    display: none;
+  }
+
+  .nav-menu {
+    position: fixed;
+    top: 0;
+    right: -50%;
+    width: 25%;
+    height: 100vh;
+    z-index: 101;
+    margin-right: 0;
+  }
+
+  .nav-menu ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: rgb(202, 195, 221);
+    opacity: 0.9;
+  }
+
+  #bars {
     display: block;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    color: black;
+  }
+}
+
+@media (max-width: 940px) {
+  .menu-item {
+    font-size: 14px;
+  }
+
+  .container {
+    width: 95%;
+  }
+
+  .description-about-me-container {
+    width: 100%;
+  }
+}
+
+@media (max-width: 840px) {
+  .main-stack-icon-container {
+    gap: 35px;
+  }
+
+  .container {
+    width: 700px;
   }
 
   .stack-item {
@@ -752,8 +787,7 @@ nav {
     margin-top: 30px;
   }
 
-  .stack-item > img,
-  .stack-item-last > img {
+  .stack-item > img {
     width: 200px;
     height: 200px;
   }
@@ -821,39 +855,6 @@ nav {
   header {
     height: 100px;
   }
-
-  .nav-menu.visible {
-    right: 0;
-  }
-
-  .nav-menu {
-    position: fixed;
-    top: 0;
-    right: -50%;
-    width: 25%;
-    height: 100vh;
-    z-index: 101;
-    margin-right: 0;
-  }
-
-  .nav-menu ul {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background: rgb(202, 195, 221);
-    opacity: 0.9;
-  }
-
-  #bars {
-    display: block;
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
-    color: black;
-  }
 }
 
 @media (max-width: 593px) {
@@ -894,8 +895,7 @@ nav {
     width: 400px;
   }
 
-  .stack-item > img,
-  .stack-item-last > img {
+  .stack-item > img {
     width: 100px;
     height: 100px;
   }
@@ -920,8 +920,7 @@ nav {
     margin-top: 30px;
   }
 
-  .stack-item > img,
-  .stack-item-last > img {
+  .stack-item > img {
     width: 100px;
     height: 100px;
   }
